--- a/style.css
+++ b/style.css
@@ -1,39 +1,51 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url("https://fonts.googleapis.com/css?family=Lato");
 body {
-    max-width: 1024px;
-    margin: 30px auto;
-    padding: 0;
-    border: 0;
-    text-decoration: none;
-    font-family: "Lato";    
+  max-width: 1024px;
+  margin: 30px auto;
+  padding: 0;
+  border: 0;
+  text-decoration: none;
+  font-family: "Lato";
+  background-color: #1d1d1d;
+  color: #ccc;
+}
+a {
+  color: #ccc;
+  font-weight: bolder;
+}
+a:hover {
+  color: #ebf700;
 }
 header {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 .header-img {
-    position: relative;    
-    width: 35px;
-    height: 35px;
-    margin-right: 7px;
-    z-index: 1;
+  position: relative;
+  width: 35px;
+  height: 35px;
+  margin-right: 7px;
+  font-size: 30px;
+  z-index: 1;
+  color: blue;
 }
 .header-img:hover {
-    z-index: 2;
-    transform: scale(1.2);
-    transition: all 0.3s ease 0s;
+  z-index: 2;
+  transform: scale(1.2);
+  transition: all 0.3s ease 0s;
 }
 .main-info h3 {
-    font-size: 22px;
+  font-size: 22px;
 }
-.main-info p, ul {
-    font-size: 18px; 
+.main-info p,
+ul {
+  font-size: 18px;
 }
 footer {
-    font-size: 20px;
-    margin-top: 30px;
+  font-size: 20px;
+  margin-top: 30px;
 }
-footer a{
-    text-decoration: none;
-    color: black;
+footer a {
+  text-decoration: none;
+  color: black;
 }
