--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@ footer a {
   text-decoration: none;
   color: black;
 }
+.pdf-download {
+  margin-top: 10%;
+  font-size: 24px;
+  display: block;
+  width: 200px;
+  height: 30px;
+}
